ZONG-32 continued: musiclayout